# recipe_exercise

./: .gitignore  Cargo.toml  README.md
src/: cookies.rs  lib.rs  main.rs  model.rs  reactive_vec.rs
src/app/: login.rs  mod.rs  nav_bar.rs  new_recipe.rs  recipes.rs
src/database/: mod.rs  recipes.rs  signin.rs  signup.rs
style/: main.scss
